# kokoroTTS

./: 404.html  Dockerfile  README.md  Taskfile.yml  VERSION  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: docker-build-tiny.yml  docker-build.yml
docs/: dockerhub.md
examples/: background.js  index.html  player.js  voices.js
kokorotts/: README.md  __init__.py  app.py  client.py
scripts/: play-audio.ps1  release.ps1
tests/: run_client_tests.py  test_http_client_long_stream.py
