[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kokorotts"
# PEP 440 package metadata version. Runtime/release display version lives in VERSION.
version = "0.2.0.dev0"
description = "KokoroTTS UI + API"
readme = "README.md"
authors = [
    { name="Hangry Labs" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.10, <3.14"
dependencies = [
    "huggingface_hub>=0.30.0,<1.0",
    "loguru",
    "misaki[en,ja,zh]>=0.9.4",
    "numpy",
    "torch",
    "transformers"
]

[project.scripts]
kokorotts = "kokorotts.__main__:main"
kokoro = "kokorotts.__main__:main"

[tool.hatch.build.targets.wheel]
only-include = ["kokorotts"]
only-packages = true

[project.urls]
Homepage = "https://github.com/Hangry-Labs/kokoroTTS"
Repository = "https://github.com/Hangry-Labs/kokoroTTS"
