[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kokorotts"
# PEP 440 package metadata version. Runtime/release display version lives in VERSION.
version = "0.3.0.dev0"
description = "KokoroTTS UI + API"
readme = "README.md"
authors = [
    { name="Hangry Labs" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]
requires-python = ">=3.11, <3.14"
dependencies = [
    "fastapi==0.136.1",
    "gradio==6.14.0",
    "huggingface-hub==0.36.2",
    "loguru==0.7.3",
    "misaki[en,ja,zh]==0.9.4",
    "numpy==2.4.4",
    "setuptools==79.0.1",
    "torch==2.11.0",
    "transformers==4.57.6",
    "uvicorn[standard]==0.46.0"
]

[project.scripts]
kokorotts = "kokorotts.__main__:main"
kokoro = "kokorotts.__main__:main"

[tool.hatch.build.targets.wheel]
only-include = ["kokorotts"]
only-packages = true

[project.urls]
Homepage = "https://github.com/Hangry-Labs/kokoroTTS"
Repository = "https://github.com/Hangry-Labs/kokoroTTS"
